Fix TypeScript build configuration for monorepo packages
- Override noEmit setting from root tsconfig in package configs
- Ensure dist folders are generated for package builds

--- a/packages/agents/tsconfig.json
+++ b/packages/agents/tsconfig.json
@@ -12,17 +12,13 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "noEmit": false,
+    "emitDeclarationOnly": false,
     "paths": {
       "@swift-travel/shared": ["../shared/src"],
       "@swift-travel/database": ["../database/src"]
     }
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "__tests__"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "__tests__"]
 }
