--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -12,16 +12,12 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "noEmit": false,
+    "emitDeclarationOnly": false,
     "paths": {
       "@swift-travel/shared": ["../shared/src"]
     }
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "__tests__"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "__tests__"]
 }
