Add ESLint ignore file and clean up build configuration
- Add .eslintignore to exclude build outputs and generated files
- Clean up incorrectly placed build artifacts in src folders
- Simplify package tsconfig files for proper builds

--- a/packages/agents/tsconfig.json
+++ b/packages/agents/tsconfig.json
@@ -13,11 +13,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": false,
-    "emitDeclarationOnly": false,
-    "paths": {
-      "@swift-travel/shared": ["../shared/src"],
-      "@swift-travel/database": ["../database/src"]
-    }
+    "emitDeclarationOnly": false
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "__tests__"]
